--- a/css/style.css
+++ b/css/style.css
@@ -2109,3 +2109,17 @@ opacity: 0.7;
   color: #f5f5f5;
 }
     
+
+.simply-countdown {
+  margin-bottom: -1em;
+}
+
+#fh5co-header .display-tc .btn, #fh5co-counter .display-tc .btn, .fh5co-cover .display-tc .btn {
+  padding: 16px 20px;
+  margin-top: 21px;
+  background: #fff !important;
+  color: #F14E95;
+  border: none !important;
+  font-size: 14px;
+  text-transform: uppercase;
+}
