--- a/css/style.css
+++ b/css/style.css
@@ -2123,3 +2123,14 @@ opacity: 0.7;
   font-size: 14px;
   text-transform: uppercase;
 }
+
+.savebtn{
+  background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;  
+    color: white;
+    border-radius: 12px;
+	/* border: solid 2px #fff; */
+}
